\name{news}
\title{News for Package asremlPlus}
\section{asremlPlus Version 4.3.43 (2022-11-30)}{
  \itemize{
  \item{Fix bugs in choosing the best spatial model in chooseSpatialModelOnIC.asrtests. Add components \code{best.spatial} and \code{best.spatial.AIC} to the value returned by chooseSpatialModelOnIC.asrtests.}
  \item{Add linear-row-by-linearcolumn-covariates interaction to the model fitted for TPNCSS option of addSpatialModelOnIC.asrtests and chooseSpatialModelOnIC.asrtests.}
}}
\section{asremlPlus Version 4.3.42 (2022-11-23)}{
  \itemize{
  \item{Add functions makeTPSPlineZMats.data.frame, addSpatialModelOnIC.asrtests and chooseSpatialModelOnIC.asrtests.}
}}
\section{asremlPlus Version 4.3.41 (2022-11-16)}{
  \itemize{
  \item{Revise test for fixed correlation so that allow.fixedcorrelation recognises any correlation term, rather than being restricted to ar1.}
}}
\section{asremlPlus Version 4.3.40 (2022-11-16)}{
  \itemize{
  \item{Compress pdf files and resubmit to CRAN.}
}}
\section{asremlPlus Version 4.3.39 (2022-11-13)}{
  \itemize{
  \item{Rebuild for R 4.2.2 and submission to CRAN.}
}}
\section{asremlPlus Version 4.3.38 (2022-10-24)}{
  \itemize{
  \item{Added function pickLSDstatistics.alldiffs.Rd.}
  \item{Revise documentation for the arguments \code{LSDtype}, \code{LSDsupplied}, \code{LSDby} and \code{LSDstatistic }.}
}}
\section{asremlPlus Version 4.3.37 (2022-09-19)}{
  \itemize{
  \item{Fix bugs in function newfit.asreml that involves making changes to models that involve  the \code{at} function. This bug affected the functions changeTerms.asrtests, changeModelOnIC.asrtests, rmboundary.asrtests, testswapran.asrtests and testranfix.asrtests. In removing a term that involve a single lewvel of a factor in an at function, it is now possible to specify either the level or the level index.}