@@ -1,6 +1,6 @@
 Package: asremlPlus
-Version: 4.3.43
-Date: 2022-11-30
+Version: 4.3.44
+Date: 2022-12-07
 Title: Augments 'ASReml-R' in Fitting Mixed Models and Packages
         Generally in Exploring Prediction Differences
 Authors@R: person("Chris","Brien", role = c("aut","cre"),
