@@ -42,8 +42,8 @@ test_that("Wheat_spatial_models_asreml4", {
                                       row.factor = "Row", col.factor = "Column",
                                       asreml.option = "grp")
   info <- infoCriteria(current.asrt$asreml.obj)
-  testthat::expect_equal(info$varDF, 5)
-  testthat::expect_lt(abs(info$AIC - 1307.361), 0.10)
+  testthat::expect_equal(info$varDF, 6)
+  testthat::expect_lt(abs(info$AIC - 1302.258), 0.10)
   
   #Repeat to make sure no carry-over effects non-NULL for factors
   current.asrt <- addSpatialModelOnIC(current.asrt, spatial.model = "TPPS", 
@@ -51,8 +51,8 @@ test_that("Wheat_spatial_models_asreml4", {
                                       row.factor = "Row", col.factor = "Column",
                                       asreml.option = "grp")
   info <- infoCriteria(current.asrt$asreml.obj)
-  testthat::expect_equal(info$varDF, 5)
-  testthat::expect_lt(abs(info$AIC - 1307.361), 0.10)
+  testthat::expect_equal(info$varDF, 6)
+  testthat::expect_lt(abs(info$AIC - 1302.258), 0.10)
   
   # Try TPPS model using mbf
   tps <- makeTPSPlineXZMats(Wheat.dat, row.covar = "cRow", col.covar = "cColumn")
@@ -62,8 +62,8 @@ test_that("Wheat_spatial_models_asreml4", {
                                       asreml.option = "mbf", tpps4mbf.obj = tps, 
                                       update = FALSE)
   info <- infoCriteria(current.asrt$asreml.obj)
-  testthat::expect_equal(info$varDF, 5)
-  testthat::expect_lt(abs(info$AIC - 1307.361), 0.10)
+  testthat::expect_equal(info$varDF, 6)
+  testthat::expect_lt(abs(info$AIC - 1302.258), 0.10)
   
   # Try TPNCSS model
   current.asrt <- addSpatialModelOnIC(init.asrt, spatial.model = "TPNCSS", 
@@ -72,7 +72,7 @@ test_that("Wheat_spatial_models_asreml4", {
                                       asreml.option = "grp")
   info <- infoCriteria(current.asrt$asreml.obj)
   testthat::expect_equal(info$varDF, 6)
-  testthat::expect_lt(abs(info$AIC - 1349.734), 0.10)
+  testthat::expect_lt(abs(info$AIC - 1329.024), 0.10)
   
   # Try corr model
   current.asrt <- addSpatialModelOnIC(init.asrt, spatial.model = "corr", 
@@ -89,7 +89,7 @@ test_that("Wheat_spatial_models_asreml4", {
   testthat::expect_equal(length(spatial.asrts$asrts), 1)
   testthat::expect_equal(names(spatial.asrts$asrts), "TPPS")
   testthat::expect_true(all(rownames(spatial.asrts$spatial.IC) == c("nonspatial", "corr", "TPNCSS", "TPPS")))
-  testthat::expect_true(all(abs(spatial.asrts$spatial.IC$AIC - c(1400.719, 1399.628, 1349.734, 1307.361)) < 0.10))
+  testthat::expect_true(all(abs(spatial.asrts$spatial.IC$AIC - c(1400.719, 1399.628, 1329.024, 1302.258)) < 0.10))
   
   #Fit two models and return both
   spatial.asrts <- chooseSpatialModelOnIC(init.asrt, trySpatial = c("TPN", "TPP"), 
@@ -99,7 +99,7 @@ test_that("Wheat_spatial_models_asreml4", {
   testthat::expect_equal(length(spatial.asrts$asrts), 2)
   testthat::expect_equal(names(spatial.asrts$asrts), c("TPNCSS", "TPPS"))
   testthat::expect_true(all(rownames(spatial.asrts$spatial.IC) == c("nonspatial", "TPNCSS", "TPPS")))
-  testthat::expect_true(all(abs(spatial.asrts$spatial.IC$AIC - c(1400.719, 1349.734, 1307.361)) < 0.10))
+  testthat::expect_true(all(abs(spatial.asrts$spatial.IC$AIC - c(1400.719, 1329.024, 1302.258)) < 0.10))
   
   #Fit initial model - Row and column fixed
   current.asr <- asreml(yield ~ Rep + WithinColPairs + Row + Column + Variety, 
@@ -120,11 +120,11 @@ test_that("Wheat_spatial_models_asreml4", {
                                       asreml.option = "grp")
   info <- infoCriteria(current.asrt$asreml.obj)
   testthat::expect_equal(info$varDF, 6)
-  testthat::expect_lt(abs(info$AIC - 1349.734), 0.10)
+  testthat::expect_lt(abs(info$AIC - 1329.024), 0.10)
   facs <- c("Row", "Column")
   #Check Row and COlumn terms not in model
-  testthat::expect_false(any(facs %in% rownames(asrtests.obj$wald.tab)) &&
-                           any(facs %in% names(asrtests.obj$asreml.obj$vparameters)))
+  testthat::expect_false(any(facs %in% rownames(current.asrt$wald.tab)) &&
+                           any(facs %in% names(current.asrt$asreml.obj$vparameters)))
   
   # Try TPPS model with fixed Row and Column
   current.asrt <- addSpatialModelOnIC(init.asrt, spatial.model = "TPPS", 
@@ -132,8 +132,8 @@ test_that("Wheat_spatial_models_asreml4", {
                                       row.factor = "Row", col.factor = "Column",
                                       asreml.option = "grp")
   info <- infoCriteria(current.asrt$asreml.obj)
-  testthat::expect_equal(info$varDF, 5)
-  testthat::expect_lt(abs(info$AIC - 1307.361), 0.10)
+  testthat::expect_equal(info$varDF, 6)
+  testthat::expect_lt(abs(info$AIC - 1302.258), 0.10)
   #Check Row and COlumn terms not in model
   facs <- c("Row", "Column")
   testthat::expect_false(any(facs %in% rownames(current.asrt$wald.tab)) &&
